Alterações feitas no título e subtitulo do projeto

--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Professional makeup - making the world beautifull</title>
+    <title>Professional makeup - making the world beautiful</title>
 </head>
 
 <body>
     <header class="logo-box">
+        <h1 class="logo-titles">
+            <span class="title">Professional Make-up</span>
+            <span class="subtitle">Making the world beautiful</span>
+
+        </h1>
         <nav>
             <ul class="navigation">
                 <li><a href="#">About us</a></li>
